--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ordListe_activity"
+            android:label="Ordlisten"
+            >
+        </activity>
+
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="j2WxuGATjIwUXf9eUTKHS42ddlb5WQ5rOrdsyCQ2" />
