--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,6 +25,7 @@
         </activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".ordListe_activity"
             android:label="Ordlisten"
             >
